@@ -455,9 +455,10 @@ class Turba_Driver_Kolab extends Turba_Driver
                 foreach ($this->_contacts_cache as $entry) {
                     if (empty($value) ||
                         (isset($entry[$field]) &&
-                         !empty($test['begin']) &&
-                         (($pos = stripos($entry[$field], $value)) !== false) &&
-                         ($pos == 0))) {
+                         ((empty($test['begin']) &&
+                           stripos($entry[$field], $value) !== false) ||
+                          (!empty($test['begin']) &&
+                           stripos($entry[$field], $value) === 0)))) {
                         $ids[] = $entry['uid'];
                     }
                 }
